--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "commonjs",
   "scripts": {
-    "dev": "node ./server.js",
+    "dev": "node ./server.js && node ./data/importData.js --import",
     "start": "nodemon ./server.js"
   },
   "dependencies": {
