--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "commonjs",
   "scripts": {
     "dev": "node ./server.js && node ./data/importData.js --import",
-    "start": "node ./data/importData.js --import && nodemon ./server.js"
+    "start": "nodemon ./server.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
